--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <header>
             <nav class="navbar">
                 <ul class="nav_menu">
-                    <li class="nav_item"><a href="#information"></a>Information</li>
-                    <li class="nav_item"><a href="#contakts"></a>Contacts</li>
-                    <li class="nav_item"><a href="#courses"></a>Courses</li>
-                    <li class="nav_item"><a href="#hobby"></a>My hobby</li>
-                    <li class="nav_item"><a href="#links"></a>Links</li>
+                    <li class="nav_item"><a href="#information">Information</a></li>
+                    <li class="nav_item"><a href="#contakts">Contacts</a></li>
+                    <li class="nav_item"><a href="#courses">Courses</a></li>
+                    <li class="nav_item"><a href="#hobby">My hobby</a></li>
+                    <li class="nav_item"><a href="#links">Links</a></li>
+                    <li class="nav_item"><a href="#lang">Languages</a></li>
                 </ul>
             </nav>
         </header>
@@ -48,7 +49,7 @@
                     <h2>Courses</h2>
                     <ul class="courses">
                         <li><a href="https://lk.result.school/teach/control/stream/view/id/695281402">Result.School</a></li>
-                        <li><a href="https://rs.school/">RS School</a></li>
+                        <li><a href="https://rs.school/">RS School (in process)</a></li>
                     </ul>
                 </div>
             </section>
@@ -65,6 +66,18 @@
             </section>
         </main>
         
+        <section id="lang">
+            <div class="card">
+                <h2>Languages</h2>
+                <ul class="lang">
+                    <li>Belarussian (native)</li>
+                    <li>Russian (native)</li>
+                    <li>English (A2)</li>
+                    <li>Polish (A2)</li>
+                </ul>
+            </div>
+        </section>
+
         <footer id="links">
             <div class="links">
                 <a href="https://www.instagram.com/" target="_blank">Instagram</a>
